--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,5 @@ Markdown==3.3.3
 pytz==2020.5
 sqlparse==0.4.1
 gunicorn==19.9.0
-py-substrate-interface==0.11.9
+substrate-interface==0.11.9
 python-decouple==3.4
