--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ jmespath==0.10.0
 Markdown==3.3.3
 more-itertools==8.6.0
 oauthlib==3.1.0
+phonenumbers==8.12.17
 Pillow==8.1.0
 psycopg2==2.8.6
 py-bip39-bindings==0.1.6
