--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ django-phonenumber-field==5.0.0
 django-rest-auth==0.9.5
 django-storages==1.11.1
 djangorestframework==3.12.2
+djangorestframework-simplejwt==4.6.0
 drf-extensions==0.6.0
 gunicorn==19.9.0
 idna==2.10
