--- a/requirements.txt
+++ b/requirements.txt
@@ -1,75 +1,121 @@
+adal==1.2.1
+amqp==2.5.2
+anyjson==0.3.3
+appdirs==1.4.4
 asgiref==3.3.1
-attrs==20.3.0
+asn1crypto==1.3.0
+astroid==2.4.2
+asttokens==2.0.3
+Babel==2.8.0
 base58==2.1.0
-bitarray==1.2.2
-boto3==1.16.59
-botocore==1.19.59
+billiard==3.6.3.0
+boto3==1.9.243
+botocore==1.12.243
+cairocffi==1.1.0
+CairoSVG==2.4.2
+celery==4.4.2
 certifi==2020.12.5
-cffi==1.14.4
-chardet==4.0.0
-cryptography==3.3.1
-cytoolz==0.11.0
+cffi==1.14.0
+chardet==3.0.4
+cryptography==2.6.1
+cssselect2==0.3.0
 defusedxml==0.6.0
+distlib==0.3.1
 dj-database-url==0.5.0
-Django==3.0.9
-django-allauth==0.44.0
-django-cors-headers==3.6.0
+Django==3.1.5
+django-allauth==0.40.0
+django-anymail==7.0.0
+django-background-tasks==1.2.5
+django-celery==3.3.1
+django-celery-beat==2.0.0
+django-compat==1.0.15
+django-cors-headers==3.1.1
+django-extra-fields==2.0.5
 django-filter==2.4.0
-django-phonenumber-field==5.0.0
+django-mail-templated==2.6.5
+django-phonenumber-field==4.0.0
+django-render-block==0.6
 django-rest-auth==0.9.5
-django-storages==1.11.1
+django-simple-history==2.8.0
+django-storages==1.7.2
+django-templated-email==2.3.0
+django-timezone-field==4.0
+django-weasyprint==1.0.1
 djangorestframework==3.12.2
-djangorestframework-simplejwt==4.4.0
-drf-extensions==0.6.0
-eth-abi==2.1.1
-eth-account==0.5.4
-eth-hash==0.3.1
-eth-keyfile==0.5.1
-eth-keys==0.3.3
-eth-rlp==0.2.1
-eth-typing==2.2.2
-eth-utils==1.10.0
+djangorestframework-jwt==1.11.0
+djangorestframework-simplejwt==4.3.0
+docutils==0.15.2
+drf-extensions==0.5.0
+filelock==3.0.12
+GDAL==2.4.4
 gunicorn==19.9.0
-hexbytes==0.2.1
-idna==2.10
-ipfshttpclient==0.7.0a1
-jmespath==0.10.0
-jsonschema==3.2.0
-lru-dict==1.1.7
+html5lib==1.1
+huey==2.3.0
+idna==2.8
+importlib-metadata==1.6.0
+isort==4.3.21
+jmespath==0.9.4
+kombu==4.6.8
+lazy-object-proxy==1.4.3
 Markdown==3.3.3
+mccabe==0.6.1
 more-itertools==8.6.0
-multiaddr==0.0.9
-netaddr==0.8.0
+mysqlclient==1.4.6
+numpy==1.18.2
 oauthlib==3.1.0
-parsimonious==0.8.1
-phonenumbers==8.12.17
-Pillow==8.1.0
-protobuf==3.14.0
+onesignal-notifications==0.2.6
+onesignal-sdk==1.1.0
+pandas==1.0.3
+pexpect==4.8.0
+phonenumbers==8.12.6
+Pillow==7.1.2
 psycopg2==2.8.6
+psycopg2-binary==2.8.4
+ptyprocess==0.6.0
 py-bip39-bindings==0.1.6
 py-ed25519-bindings==0.1.2
 py-sr25519-bindings==0.1.2
 pycparser==2.20
-pycryptodome==3.10.1
+pycryptodome==3.9.9
 PyJWT==1.7.1
-pyrsistent==0.17.3
-python-dateutil==2.8.1
+pylint==2.5.3
+pylint-django==2.1.0
+pylint-plugin-utils==0.6
+PyMySQL==0.9.3
+Pyphen==0.9.5
+python-crontab==2.4.1
+python-dateutil==2.8.0
 python-decouple==3.4
-python3-openid==3.2.0
+python-http-client==3.2.1
+python3-openid==3.1.0
 pytz==2020.5
+redis==3.5.0
+regex==2020.7.14
 requests==2.25.1
-requests-oauthlib==1.3.0
-rlp==2.0.1
-s3transfer==0.3.4
-scalecodec==0.10.48
-six==1.15.0
+requests-oauthlib==1.2.0
+s3transfer==0.2.1
+scalecodec==0.10.47
+semantic-version==2.8.5
+sendgrid==6.1.0
+six==1.12.0
 sqlparse==0.4.1
 substrate-interface==0.11.9
-toolz==0.11.1
-twilio==6.51.0
-urllib3==1.26.2
-varint==1.0.2
-web3==5.16.0
+TBB==0.1
+tinycss2==1.0.2
+toml==0.10.1
+twilio==6.35.2
+typed-ast==1.4.1
+urllib3==1.25.6
+vine==1.3.0
+virtualenv==20.0.27
+vyper==0.2.7
+WeasyPrint==51
+webencodings==0.5.1
 websocket-client==0.57.0
-websockets==8.1
+whitenoise==5.0.1
+wrapt==1.12.1
+xlrd==1.2.0
+XlsxWriter==1.3.6
+xmltodict==0.12.0
 xxhash==2.0.0
+zipp==3.1.0
